added orange to the list

--- a/hello-world.html
+++ b/hello-world.html
@@ -6,11 +6,12 @@
 </head>
 <body>
     <h1>Hello World</h1>
-        <p>Howdy! Welcome to CodeUP</p>
+        <p>Howdy! Welcome to Codeup!</p>
         <ul>
             <li>Red</li>
             <li>Blue</li>
             <li>Green</li>
+            <li>orange</li>
         </ul>
 </body>
 </html>
