adding external js sheet

--- a/hello-world.html
+++ b/hello-world.html
@@ -13,5 +13,6 @@
             <li>Green</li>
             <li>orange</li>
         </ul>
+    <script src="js/external.js"></script>
 </body>
 </html>
