--- a/loops.html
+++ b/loops.html
@@ -5,6 +5,6 @@
     <title>loops</title>
 </head>
 <body>
- <script src="js/while.js"></script>
+ <script src="js/break_and_continue.js"></script>
 </body>
 </html>
