--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,61 @@
     <title>Welcome</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1 id="top">Welcome to Veridian Dynamics</h1>
+<p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
+<br>
+<hr>
+<h2>Core Values</h2>
+<ul>
+    <li>Competence</li>
+    <li>Involvement</li>
+    <li>Technology</li>
+</ul>
+<h2>Our Process</h2>
+<ol>
+    <li>Plan</li>
+    <li>Evaluate</li>
+    <li>Implement</li>
+</ol>
+<h2>2020 Vision</h2>
+<ul>
+    <li>Become #1 in Technology</li>
+    <li>Increase Success by 20%</li>
+    <li>Increase Business by 30%</li>
+</ul>
+<br>
+<hr>
+<h2>Company Vision</h2>
+<img src="img/pexels-andrew-neel-2312369 (1).jpg" alt="Laptop, coffee and phone on wooden desk" style="width:500px;height:600px;">
+<img src="img/guy in field.jpg" alt="silhouetted man standing in field during dusk taking a photo" style="width:500px;height:600px;">
+<img src="img/sunset over ocean.jpg " alt="sunset over ocean" style="width:500px;height:600px;">
+<img src="img/office black and white.jpg" alt="black and white photo of man working in an office" style="width:500px;height:600px;">
+<h2>Our Product</h2>
+<table>
+    <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base Technology</td>
+    </tr>
+    <tr>
+        <td>Advanced</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+    <tr>
+        <td>Premium</td>
+        <td>$499</td>
+        <td>Unlimited Support</td>
+    </tr>
+</table>
+
+<p><em>All products come with our quality guarantee.</em></p>
+<a href="top">Go to the top of the page.</a>
+
 </body>
 </html>
