completed daily js warmup.

--- a/welcome.html
+++ b/welcome.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1 class="fancy-header" id="top">Welcome to Veridian Dynamics</h1>
-<p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></strong></p>
+<h1 class="fancy-header" id="top">Welcome to Prestige Worldwide</h1>
+<p class="intro">Putting in the man-hours, so <strong>you</strong> don't have to!</p>
 <br>
 <hr>
 <h2>Core Values</h2>
-<ul>
+<ul class="unordered">
     <li>Competence</li>
     <li>Involvement</li>
     <li>Technology</li>
@@ -26,15 +26,18 @@
 <ul>
     <li>Become #1 in Technology</li>
     <li>Increase Success by 20%</li>
-    <li>Increase Business by 30%</li>
+    <li>Black Leather Gloves</li>
 </ul>
 <br>
 <hr>
 <h2>Company Vision</h2>
-<img src="img/pexels-andrew-neel-2312369 (1).jpg" alt="Laptop, coffee and phone on wooden desk" style="width:500px;height:600px;">
-<img src="img/guy in field.jpg" alt="silhouetted man standing in field during dusk taking a photo" style="width:500px;height:600px;">
-<img src="img/sunset over ocean.jpg " alt="sunset over ocean" style="width:500px;height:600px;">
-<img src="img/office black and white.jpg" alt="black and white photo of man working in an office" style="width:500px;height:600px;">
+<img src="img/Prestige1.jpeg" alt="Step Brother on a boat" style="width:340px;height:340px;">
+<br>
+<img src="img/Prestige_research.jpeg" alt="Step Brothers putting white out on a bee" style="width:340px;height:340px;">
+<br>
+<img src="img/prestigeworldwide_security.jpeg" alt="Step Brothers holding a knife and having a german shepherd on a leash" style="width:340px;height:340px;">
+<br>
+<img src="img/blackleathergloves.jpeg" alt="black leather gloves" style="width:340px;height:340px;">
 <h2>Our Product</h2>
 <table>
     <tr>
