--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<h1 class="codeup" id="myH1">JQuery Selectors Intro!</h1>
+
+    <p class="codeup" id="myPara">This is a nonsense sentence!</p>
+
+
+<div class="ulDiv" id="myUlDiv">
+<ul class="unordered" id="myUnordered">
+    <li class="listItem" id="myListItem1">Item 1</li>
+    <li class="listItem" id="myListItem2">Item 2</li>
+    <li class="listItem" id="myListItem3">Item 3</li>
+</ul>
+</div>
 
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
