--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -3,18 +3,56 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Ajax-blog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/ajax-blog.css">
 </head>
 <body>
-<div id="posts">
+
+<header>
+  <img class="img-fluid w-100" src="img/pizza.png" alt="">
+</header>
 
 
+<div class="container mt-5">
+  <div class='row' id="insertBlogInfo">
+    <!-- Blog cards will be dynamically added here -->
+  </div>
 </div>
 
+<button id="buttonP">Click Here</button>
 
-
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+<script>
+  $(document).ready(function() {
+
+    function loadBlogData() {
+      $.get('data/blog.json', function(data) {
+        data.forEach(function(blogContent) {
+          let html = "<div class='col-lg-6'>" +
+                  "<div class='card'>" +
+                  "<div class='card-body'>" +
+                  "<h1 class='card-title mb-3'>" + blogContent.title + "</h1>" +
+                  "<hr>" +
+                  "<div class='card-text'>" + blogContent.content + "</div>" +
+                  "<h6 class='card-text mb-2 mt-2'>" + blogContent.date + "</h6>" +
+                  "<h6 class='card-text'>" + 'Categories: ' + blogContent.categories.join(", ") + "</h6>" +
+                  "</div>" +
+                  "</div>" +
+                  "</div>";
+
+          $('#insertBlogInfo').append(html);
+        });
+      });
+    }
+
+    loadBlogData();
+
+  });
+</script>
 </body>
 </html>
+
