--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -5,6 +5,9 @@
   <title>First Mapbox Map</title>
   <!-- Mapbox JS -->
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
+  <!--  JQuerry-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <!-- Mapbox CSS -->
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -30,12 +33,22 @@
 
 <div class="container mb-1" id='map'></div>
 
+
+      <!--Terrain button-->
+
+<div class="container d-flex justify-content-center mt-2">
+<button class="btn btn-primary " id="terrainBtn">Add Terrain Layer</button>
+</div>
+
+      <!--Zoom Range-->
+
 <div class="container mt-3">
   <h5 class=" d-flex justify-content-center">Zoom Level</h5>
   <div class="mb-3 custom-range-wrapper">
-    <input type="range" class="form-range w-50" min="0" max="5" id="customRange2">
+    <input type="range" class="form-range w-50" min="0" max="3" id="customRange2">
   </div>
 </div>
+
 
 <script src="js/js_keys.js"></script>
 <script src="js/mapbox-geocoder-utils.js"></script>
@@ -50,7 +63,10 @@
     center: [-95.473488, 30.315239]
   });
 
-  let restaurants = [
+
+   // Array of restaurant objects
+
+  const restaurants = [
     {
       name: "Chipotle",
       coordinates: [-95.473488, 30.315239],
@@ -67,6 +83,7 @@
       description: "Namaste Indian Chinese Cuisine is a restaurant that offers a fusion of Indian and Chinese cuisine, combining flavors and dishes from both culinary traditions."
     }
   ];
+        // Loop for restaurant Markers
 
   restaurants.forEach(function(restaurant) {
     let popup = new mapboxgl.Popup().setHTML(`<h1>${restaurant.name}</h1><p>${restaurant.description}</p>`);
@@ -77,6 +94,9 @@
             .setPopup(popup);
   });
 
+  // Automatic zoom after 2 seconds
+
+
   setTimeout(function() {
     map.flyTo({
       center: [-95.473488, 30.315239],
@@ -85,6 +105,47 @@
       curve: 1.4
     });
   }, 2000);
+
+  // Add contour lines function
+
+  $('#terrainBtn').on('click', function() {
+    var terrainLayer = map.getLayer('terrain-data');
+    if (terrainLayer) {
+      // Layer already added, remove it
+      map.removeLayer('terrain-data');
+      $('#terrainBtn').toggleClass('active');
+    } else {
+      // Layer not added, add it
+      map.addLayer({
+        id: 'terrain-data',
+        type: 'line',
+        source: {
+          type: 'vector',
+          url: 'mapbox://mapbox.mapbox-terrain-v2'
+        },
+        'source-layer': 'contour'
+      });
+      $('#terrainBtn').toggleClass('active');
+    }
+  });
+
+
+     // Range function
+  var zoomLevels = {
+    0: 6,
+    1: 9,
+    2: 12,
+    3: 15
+  };
+
+  var rangeInput = document.getElementById('customRange2');
+
+  rangeInput.addEventListener('input', function(e) {
+    var level = parseInt(e.target.value);
+    var zoomLevel = zoomLevels[level];
+    map.setZoom(zoomLevel);
+  });
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
