--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>First Mapbox Map</title>
-  <!-- Mapbox JS -->
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
-  <!--  JQuerry-->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta charset="UTF-8">
+    <title>First Mapbox Map</title>
+    <!-- Mapbox JS -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
+    <!--  JQuerry-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <!-- Mapbox CSS -->
-  <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <style>
-  #map {
-    /* the width and height may be set to any size */
-    width: 75%;
-    height: 550px;
-    align-self: center;
-  }
+    <!-- Mapbox CSS -->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet'/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        #map {
+            /* the width and height may be set to any size */
+            width: 75%;
+            height: 550px;
+            align-self: center;
+        }
 
-  .custom-range-wrapper {
-    display: flex;
-    justify-content: center;
-  }
+        .custom-range-wrapper {
+            display: flex;
+            justify-content: center;
+        }
 
-</style>
+    </style>
 </head>
 <body>
 
 <h1 class="mb-1 mt-2 d-flex justify-content-center">My First Mapbox Map!</h1>
 <hr class="mb-5">
 
+
 <div class="container mb-1" id='map'></div>
 
 
-      <!--Terrain button-->
+<!--Terrain button-->
 
 <div class="container d-flex justify-content-center mt-2">
-<button class="btn btn-primary " id="terrainBtn">Add Terrain Layer</button>
+    <button class="btn btn-primary " id="terrainBtn">Add Terrain Layer</button>
 </div>
 
-      <!--Zoom Range-->
+<!--Zoom Range-->
 
 <div class="container mt-3">
-  <h5 class=" d-flex justify-content-center">Zoom Level</h5>
-  <div class="mb-3 custom-range-wrapper">
-    <input type="range" class="form-range w-50" min="0" max="3" id="customRange2">
-  </div>
+    <h5 class=" d-flex justify-content-center">Zoom Level</h5>
+    <div class="mb-3 custom-range-wrapper">
+        <input type="range" class="form-range w-50" min="0" max="3" id="customRange2">
+    </div>
 </div>
 
 
@@ -55,99 +57,103 @@
 
 <!-- Custom JS -->
 <script>
-  mapboxgl.accessToken = myMapboxKey;
-  var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v11',
-    zoom: 8,
-    center: [-95.473488, 30.315239]
-  });
+    mapboxgl.accessToken = myMapboxKey;
+    var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v11',
+        zoom: 8,
+        center: [-95.473488, 30.315239]
+    });
 
 
-   // Array of restaurant objects
+    // Array of restaurant objects
 
-  const restaurants = [
-    {
-      name: "Chipotle",
-      coordinates: [-95.473488, 30.315239],
-      description: "Chipotle is a fast-casual restaurant chain known for its customizable Mexican-inspired cuisine."
-    },
-    {
-      name: "Chik N Max",
-      coordinates: [-95.489875, 30.418155],
-      description: "ChikN Max is a fast-food restaurant chain that specializes in chicken-based menu items."
-    },
-    {
-      name: "Namaste Indian Chinese Cuisine",
-      coordinates: [-95.446701, 30.127479],
-      description: "Namaste Indian Chinese Cuisine is a restaurant that offers a fusion of Indian and Chinese cuisine, combining flavors and dishes from both culinary traditions."
-    }
-  ];
-        // Loop for restaurant Markers
+    const restaurants = [
+        {
+            name: "Chipotle",
+            coordinates: [-95.473488, 30.315239],
+            description: "Chipotle is a fast-casual restaurant chain known for its customizable Mexican-inspired cuisine."
+        },
+        {
+            name: "Chik N Max",
+            coordinates: [-95.489875, 30.418155],
+            description: "ChikN Max is a fast-food restaurant chain that specializes in chicken-based menu items."
+        },
+        {
+            name: "Namaste Indian Chinese Cuisine",
+            coordinates: [-95.446701, 30.127479],
+            description: "Namaste Indian Chinese Cuisine is a restaurant that offers a fusion of Indian and Chinese cuisine, combining flavors and dishes from both culinary traditions."
+        }
+    ];
+    // Loop for restaurant Markers
 
-  restaurants.forEach(function(restaurant) {
-    let popup = new mapboxgl.Popup().setHTML(`<h1>${restaurant.name}</h1><p>${restaurant.description}</p>`);
+    restaurants.forEach(function (restaurant) {
+        let popup = new mapboxgl.Popup().setHTML(`<h1>${restaurant.name}</h1><p>${restaurant.description}</p>`);
 
-    new mapboxgl.Marker()
+        new mapboxgl.Marker()
             .setLngLat(restaurant.coordinates)
             .addTo(map)
             .setPopup(popup);
-  });
-
-  // Automatic zoom after 2 seconds
-
-
-  setTimeout(function() {
-    map.flyTo({
-      center: [-95.473488, 30.315239],
-      zoom: 12,
-      speed: 1.2,
-      curve: 1.4
     });
-  }, 2000);
 
-  // Add contour lines function
-
-  $('#terrainBtn').on('click', function() {
-    var terrainLayer = map.getLayer('terrain-data');
-    if (terrainLayer) {
-      // Layer already added, remove it
-      map.removeLayer('terrain-data');
-      $('#terrainBtn').toggleClass('active');
-    } else {
-      // Layer not added, add it
-      map.addLayer({
-        id: 'terrain-data',
-        type: 'line',
-        source: {
-          type: 'vector',
-          url: 'mapbox://mapbox.mapbox-terrain-v2'
-        },
-        'source-layer': 'contour'
-      });
-      $('#terrainBtn').toggleClass('active');
-    }
-  });
+    // Automatic zoom after 2 seconds
 
 
-     // Range function
-  var zoomLevels = {
-    0: 6,
-    1: 9,
-    2: 12,
-    3: 15
-  };
+    setTimeout(function () {
+        map.flyTo({
+            center: [-95.473488, 30.315239],
+            zoom: 12,
+            speed: 1.2,
+            curve: 1.4
+        });
+    }, 2000);
 
-  var rangeInput = document.getElementById('customRange2');
+    // Add contour lines function
 
-  rangeInput.addEventListener('input', function(e) {
-    var level = parseInt(e.target.value);
-    var zoomLevel = zoomLevels[level];
-    map.setZoom(zoomLevel);
-  });
+    $('#terrainBtn').on('click', function () {
+        var terrainLayer = map.getLayer('terrain-data');
+        if (terrainLayer) {
+            // Layer already added, remove it
+            map.removeLayer('terrain-data');
+            $('#terrainBtn').toggleClass('active');
+        } else {
+            // Layer not added, add it
+            map.addLayer({
+                id: 'terrain-data',
+                type: 'line',
+                source: {
+                    type: 'vector',
+                    url: 'mapbox://mapbox.mapbox-terrain-v2'
+                },
+                'source-layer': 'contour'
+            });
+            $('#terrainBtn').toggleClass('active');
+        }
+    });
+
+
+    // Range function
+    var zoomLevels = {
+        0: 6,
+        1: 9,
+        2: 12,
+        3: 15
+    };
+
+    var rangeInput = document.getElementById('customRange2');
+
+    rangeInput.addEventListener('input', function (e) {
+        var level = parseInt(e.target.value);
+        var zoomLevel = zoomLevels[level];
+        map.setZoom(zoomLevel);
+    });
 
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+        crossorigin="anonymous"></script>
 </body>
 </html>
