added a for loop to iterate over my cards and push them into my bootstrap cards.

--- a/weather_map.html
+++ b/weather_map.html
@@ -44,39 +44,39 @@
 <div class="container">
     <div class="row justify-content-around mb-4">
         <div class="col-4">
-            <div class="card text-between my-4">
-                <h5 class="card-header">Title</h5>
+            <div class="card text-center my-4">
+                <h5 class="card-header date_test title-for-card">Title</h5>
                 <p class="card-body">some stuff</p>
                 <p class="card-text">Some starter Text</p>
                 <p class="card-text">Some starter Text</p>
             </div>
         </div>
         <div class="col-4">
-            <div class="card text-between my-4">
-                <h5 class="card-header">Title</h5>
+            <div class="card text-center my-4">
+                <h5 class="card-header date_test title-for-card" >Title</h5>
                 <p class="card-body">some stuff</p>
                 <p class="card-text">Some starter Text</p>
                 <p class="card-text">Some starter Text</p>
             </div>
         </div>
         <div class="col-4">
-            <div class="card text-between my-4">
-                <h5 class="card-header">Title</h5>
+            <div class="card text-center my-4">
+                <h5 class="card-header date_test title-for-card">Title</h5>
                 <p class="card-body">some stuff</p>
                 <p class="card-text">Some starter Text</p>
                 <p class="card-text">Some starter Text</p>
             </div>
         </div><div class="col-4">
-            <div class="card text-between my-4">
-                <h5 class="card-header">Title</h5>
+            <div class="card text-center my-4">
+                <h5 class="card-header date_test title-for-card">Title</h5>
                 <p class="card-body">some stuff</p>
                 <p class="card-text">Some starter Text</p>
                 <p class="card-text">Some starter Text</p>
             </div>
         </div>
         <div class="col-4">
-            <div class="card text-between my-4">
-                <h5 class="card-header">Title</h5>
+            <div class="card text-center my-4">
+                <h5 class="card-header date_test title-for-card">Title</h5>
                 <p class="card-body">some stuff</p>
                 <p class="card-text">Some starter Text</p>
                 <p class="card-text">Some starter Text</p>
@@ -92,7 +92,7 @@
 <div class="container mb-1 w-100" id='map'></div>
 
 
-<div id="date_test">
+
 
 
 </div>
