--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Mapbox Map</title>
     <!-- Mapbox JS -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
@@ -33,7 +34,7 @@
 <hr class="mb-5">
 
 
-<div class="container mb-1" id='map'></div>
+<div class="container mb-5" id='map'></div>
 
 
 <!--Terrain button-->
