--- a/weather_map.html
+++ b/weather_map.html
@@ -11,6 +11,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Map Project</title>
     <!-- Mapbox JS -->
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
@@ -46,56 +47,66 @@
         <div class="col-4">
             <div class="card text-center my-4">
                 <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body">some stuff</p>
-                <p class="card-text">Some starter Text</p>
-                <p class="card-text">Some starter Text</p>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-center my-4">
-                <h5 class="card-header date_test title-for-card" >Title</h5>
-                <p class="card-body">some stuff</p>
-                <p class="card-text">Some starter Text</p>
-                <p class="card-text">Some starter Text</p>
+                <p class="card-body mt-3 temperature">some stuff</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                    <li class="list-group-item wind"></li>
+                    <li class="list-group-item sunInfo"></li>
+                </ul>
             </div>
         </div>
         <div class="col-4">
             <div class="card text-center my-4">
                 <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body">some stuff</p>
-                <p class="card-text">Some starter Text</p>
-                <p class="card-text">Some starter Text</p>
-            </div>
-        </div><div class="col-4">
-            <div class="card text-center my-4">
-                <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body">some stuff</p>
-                <p class="card-text">Some starter Text</p>
-                <p class="card-text">Some starter Text</p>
+                <p class="card-body mt-3 temperature">some stuff</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                    <li class="list-group-item wind"></li>
+                    <li class="list-group-item sunInfo"></li>
+                </ul>
             </div>
         </div>
         <div class="col-4">
             <div class="card text-center my-4">
                 <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body">some stuff</p>
-                <p class="card-text">Some starter Text</p>
-                <p class="card-text">Some starter Text</p>
+                <p class="card-body mt-3 temperature">some stuff</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                    <li class="list-group-item wind"></li>
+                    <li class="list-group-item sunInfo"></li>
+                </ul>
             </div>
         </div>
-
+        <div class="col-4">
+            <div class="card text-center my-4">
+                <h5 class="card-header date_test title-for-card">Title</h5>
+                <p class="card-body mt-3 temperature">some stuff</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                    <li class="list-group-item wind"></li>
+                    <li class="list-group-item sunInfo"></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-center my-4">
+                <h5 class="card-header date_test title-for-card">Title</h5>
+                <p class="card-body mt-3 temperature">some stuff</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                    <li class="list-group-item wind"></li>
+                    <li class="list-group-item sunInfo"></li>
+                </ul>
+            </div>
         </div>
 
     </div>
-</div>
-
-
-<div class="container mb-1 w-100" id='map'></div>
-
-
-
-
 
 </div>
+
+
+<div class="container mb-5 w-100" id='map'></div>
+
 
 <script src="js/mapbox-geocoder-utils.js"></script>
 
