Added geolocate control to map.

--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -25,6 +25,25 @@
             display: flex;
             justify-content: center;
         }
+        .coordinates {
+            background: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            position: absolute;
+            bottom: 40px;
+            left: 10px;
+            padding: 5px 10px;
+            margin: 0;
+            font-size: 11px;
+            line-height: 18px;
+            border-radius: 3px;
+            display: none;
+        }
+        .marker {
+            background-color: red;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+        }
 
     </style>
 </head>
