Added search box function.

--- a/weather_map.html
+++ b/weather_map.html
@@ -88,6 +88,13 @@
         </div>
     </div>
 </div>
+<div class="container justify-content-center">
+    <div class="row">
+<input id="search-box" type="text" placeholder="Search location...">
+<button class="btn-primary"id="search-button">Search</button>
+    </div>
+</div>
+
 
 <div class="container mb-5 w-100" id='map'></div>
 
