--- a/weather_map.html
+++ b/weather_map.html
@@ -10,9 +10,13 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Mapbox Geocoder CSS -->
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
+    <link rel="stylesheet"
+          href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
+          type="text/css">
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css" type="text/css"
+    <link rel="stylesheet"
+          href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css"
+          type="text/css"
     />
 
     <style>
@@ -29,69 +33,138 @@
 <h1 class="mb-1 mt-2 d-flex justify-content-center">Weather Map!</h1>
 <hr class="mb-5">
 
-<div class="container">
-    <div class="row justify-content-around mb-4">
-        <div class="col-4">
-            <div class="card text-center my-4">
-                <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body mt-3 temperature">some stuff</p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item description">Sondjkfh jksdh</li>
-                    <li class="list-group-item wind"></li>
-                    <li class="list-group-item sunInfo"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-center my-4">
-                <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body mt-3 temperature">some stuff</p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item description">Sondjkfh jksdh</li>
-                    <li class="list-group-item wind"></li>
-                    <li class="list-group-item sunInfo"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-center my-4">
-                <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body mt-3 temperature">some stuff</p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item description">Sondjkfh jksdh</li>
-                    <li class="list-group-item wind"></li>
-                    <li class="list-group-item sunInfo"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-center my-4">
-                <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body mt-3 temperature">some stuff</p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item description">Sondjkfh jksdh</li>
-                    <li class="list-group-item wind"></li>
-                    <li class="list-group-item sunInfo"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card text-center my-4">
-                <h5 class="card-header date_test title-for-card">Title</h5>
-                <p class="card-body mt-3 temperature">some stuff</p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item description">Sondjkfh jksdh</li>
-                    <li class="list-group-item wind"></li>
-                    <li class="list-group-item sunInfo"></li>
-                </ul>
+
+<div class="container mt-3">
+    <div class="row  justify-content-center">
+        <div class="row w-50">
+            <div class="col md-8">
+                <div id="slides-only" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="card text-center my-4 d-block w-100">
+                                <h5 class="card-header date_test title-for-card">Title</h5>
+                                <p class="card-body mt-3 temperature">some stuff</p>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                                    <li class="list-group-item wind"></li>
+                                    <li class="list-group-item sunInfo"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card text-center my-4">
+                                <h5 class="card-header date_test title-for-card">Title</h5>
+                                <p class="card-body mt-3 temperature">some stuff</p>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                                    <li class="list-group-item wind"></li>
+                                    <li class="list-group-item sunInfo"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card text-center my-4">
+                                <h5 class="card-header date_test title-for-card">Title</h5>
+                                <p class="card-body mt-3 temperature">some stuff</p>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                                    <li class="list-group-item wind"></li>
+                                    <li class="list-group-item sunInfo"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card text-center my-4">
+                                <h5 class="card-header date_test title-for-card">Title</h5>
+                                <p class="card-body mt-3 temperature">some stuff</p>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                                    <li class="list-group-item wind"></li>
+                                    <li class="list-group-item sunInfo"></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card text-center my-4">
+                                <h5 class="card-header date_test title-for-card">Title</h5>
+                                <p class="card-body mt-3 temperature">some stuff</p>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item description">Sondjkfh jksdh</li>
+                                    <li class="list-group-item wind"></li>
+                                    <li class="list-group-item sunInfo"></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<!--<div class="container">-->
+<!--    <div class="row justify-content-around mb-4">-->
+<!--        <div class="col-4">-->
+<!--            <div class="card text-center my-4">-->
+<!--                <h5 class="card-header date_test title-for-card">Title</h5>-->
+<!--                <p class="card-body mt-3 temperature">some stuff</p>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item description">Sondjkfh jksdh</li>-->
+<!--                    <li class="list-group-item wind"></li>-->
+<!--                    <li class="list-group-item sunInfo"></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--            <div class="card text-center my-4">-->
+<!--                <h5 class="card-header date_test title-for-card">Title</h5>-->
+<!--                <p class="card-body mt-3 temperature">some stuff</p>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item description">Sondjkfh jksdh</li>-->
+<!--                    <li class="list-group-item wind"></li>-->
+<!--                    <li class="list-group-item sunInfo"></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--            <div class="card text-center my-4">-->
+<!--                <h5 class="card-header date_test title-for-card">Title</h5>-->
+<!--                <p class="card-body mt-3 temperature">some stuff</p>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item description">Sondjkfh jksdh</li>-->
+<!--                    <li class="list-group-item wind"></li>-->
+<!--                    <li class="list-group-item sunInfo"></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--            <div class="card text-center my-4">-->
+<!--                <h5 class="card-header date_test title-for-card">Title</h5>-->
+<!--                <p class="card-body mt-3 temperature">some stuff</p>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item description">Sondjkfh jksdh</li>-->
+<!--                    <li class="list-group-item wind"></li>-->
+<!--                    <li class="list-group-item sunInfo"></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--            <div class="card text-center my-4">-->
+<!--                <h5 class="card-header date_test title-for-card">Title</h5>-->
+<!--                <p class="card-body mt-3 temperature">some stuff</p>-->
+<!--                <ul class="list-group list-group-flush">-->
+<!--                    <li class="list-group-item description">Sondjkfh jksdh</li>-->
+<!--                    <li class="list-group-item wind"></li>-->
+<!--                    <li class="list-group-item sunInfo"></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="container justify-content-center">
     <div class="row">
-<input id="search-box" type="text" placeholder="Search location...">
-<button class="btn-primary"id="search-button">Search</button>
+        <input id="search-box" type="text" placeholder="Search location...">
+        <button class="btn-primary" id="search-button">Search</button>
     </div>
 </div>
 
@@ -102,8 +175,12 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+        crossorigin="anonymous"></script>
 <script src="js/mapbox-geocoder-utils.js"></script>
 <script src="js/js_keys.js"></script>
 <script src="js/weather_map.js"></script>
