moved css into seperate css sheet, working on media queries to keep the screen from elongating at small viewpoints.

--- a/weather_map.html
+++ b/weather_map.html
@@ -18,23 +18,8 @@
           href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css"
           type="text/css"
     />
+    <link rel="stylesheet" href="css/weather_map.css">
 
-    <style>
-        #map {
-            /* the width and height may be set to any size */
-            width: 75%;
-            height: 550px;
-            align-self: center;
-        }
-        .carousel-control-prev-icon,
-        .carousel-control-next-icon{
-            background-color: black; /* Replace #ff0000 with your desired color */
-        }
-        .carousel-indicators {
-            background-color: black;
-            opacity: 35%;
-        }
-    </style>
 </head>
 <body>
 
@@ -43,9 +28,9 @@
 
 
 <div class="container mt-3">
-    <div class="row  justify-content-center">
+    <div class="row justify-content-center">
         <div class="row w-50">
-            <div class="col md-8">
+            <div class="col-md-12">
                 <div id="slides-with-indicators" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button class="active"
