--- a/weather_map.html
+++ b/weather_map.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-
+<!--        Weather MAp Content-->
 <h1 class="mb-1 mt-2 d-flex justify-content-center">Weather Map!</h1>
 <hr class="mb-5">
 
@@ -31,6 +31,7 @@
     <div class="row justify-content-center">
         <div class="row w-50">
             <div class="col-md-12">
+<!--                Carousel-->
                 <div id="slides-with-indicators" class="carousel slide">
                         <div class="carousel-indicators">
                             <button class="active"
@@ -64,6 +65,7 @@
                             aria-current="true"
                             aria-label="Slide 5"></button>
                         </div>
+<!--                    Card Content-->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="card text-center my-4 d-block w-100">
